<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="message_response_error">无法连接站点</string>
    <string name="message_update_app_ok">更新</string>
    <string name="message_update_app_no">不更新</string>
    <string name="message_update_app_title">更新提示</string>
    <string name="message_system_update">发现新版本！是否进行版本升级？</string>
    <string name="message_title_new">新闻</string>
    <string name="message_title_video">视频</string>
    <string name="message_title_pic">图片</string>
    <string name="message_title_bbs">论坛</string>
    <string name="message_title_board">直通车</string>
    <string name="message_error_dataintent">对不起，页面数据加载，请稍等片刻！</string>
    <string name="message_error_jsondata">对不起，页面json数据加载，请稍等片刻！</string>
    <string name="message_pageload_notcompleted">对不起，页面加载未完成，请稍等片刻！</string>
    <string name="message_notice_nologin">对不起，您还没有登录，请先登录！</string>
    <string name="message_too_frequent">对不起，您的操作太频繁，请稍候再试！</string>
    <string name="message_send_failed">提交失败，请稍候再试！</string>
    <string name="message_to_login">请先登录后再试！</string>
    <string name="message_send_success">提交成功！</string>
    <string name="message_clear_cache">是否清除缓存？</string>
    <string name="message_clear_ok">确认</string>
    <string name="message_clear_no">取消</string>
    <string name="message_notice_nopreid">对不起，没有比当前更新的主题！</string>
    <string name="message_notice_nonextid">对不起，没有比当前更早的主题！</string>
    <string name="message_notice_nopreid_news">对不起，没有比当前更新的新闻！</string>
    <string name="message_notice_nonextid_news">对不起，没有比当前更早的新闻！</string>
    <string name="message_notice_nopreid_video">对不起，没有比当前更新的视频！</string>
    <string name="message_notice_nonextid_video">对不起，没有比当前更早的视频！</string>
    <string name="message_notice_nonetwork">网络现在不可用，请稍后再试</string>
    <string name="app_name">手机天山网</string>
    <string name="copyright">Power by Discuz! © Comsenz.inc.</string>
    <string name="viewnews_title">查看新闻</string>
    <string name="forum_bt_viewauthor">只看楼主</string>
    <string name="STR_SETTING">设置</string>
    <string name="STR_USER_PROFILE">个人中心</string>
    <string name="STR_RECOMMEND_APP">推荐应用</string>
    <string name="STR_CONFIG_SHARE_ACCT">绑定分享账号</string>
    <string name="STR_NOT_DOWNLOAD_IMG">3G/2G网络禁止下图</string>
    <string name="STR_AUTO_PUSH_MSG">自动推送</string>
    <string name="STR_CLEAR_CACHE">清除缓存</string>
    <string name="STR_ABOUT">关于</string>
    <string name="STR_UPDATE">版本更新</string>
    <string name="STR_NEW_USER_GUIDE">新手引导</string>
    <string name="STR_CAMEARPHOTO">拍照</string>
    <string name="STR_GALLERYPHOTO">选择本地图片</string>
    <string name="STR_USER_NICKNAME">昵称</string>
    <string name="STR_USER_UID">UID:</string>
    <string name="STR_SET_AVATAR">更换头像</string>
    <string name="STR_SETTINGAVATAR">设置头像</string>
    <string name="STR_LOGOUT">注销</string>
    <string name="STR_LOGOUT_COMMIT">确定注销？</string>
    <string name="STR_MY_STICK">我的帖子</string>
    <string name="STR_MY_COMMENT">我的评论</string>
    <string name="STR_MY_SAVED">我的收藏</string>
    <string name="STR_NEARBY">我的身边</string>
    <string name="STR_NEARBY_BOARD">身边的报料</string>
    <string name="STR_NEARBY_PEOPLE">身边的人</string>
    <string name="STR_NEARBY_NEWS">身边的新闻</string>
    <string name="STR_NEARBY_THRED">身边的帖子</string>
    <string name="STR_MY_MESSGAE">我的短消息</string>
    <string name="SEND_MESSGAE">发短消息</string>
    <string name="SEND">发送</string>
    <string name="STR_DOWNLOAD_ALL">离线下载</string>
    <string name="STR_VERSION">版本:v</string>
    <string name="STR_COPYRIGHT_CN">天山网社区 版权所有</string>
    <string name="STR_COPYRIGHT_EN">Copyright © 2001-2012 天山网社区</string>
    <string name="STR_COPYRIGHT_DEFINE">All Right Reserved</string>
    <string name="STR_SHARE_TITLE">绑定分享账号</string>
    <string name="STR_TENCENT_BLOG">腾讯微博</string>
    <string name="STR_QQ_SPACE">QQ空间</string>
    <string name="STR_SINA">新浪微博</string>
    <string name="STR_SOHU">搜狐微博</string>
    <string name="STR_RENREN">人人网</string>
    <string name="STR_NEWS">新闻</string>
    <string name="STR_VEDIO">视频</string>
    <string name="STR_IMG">图片</string>
    <string name="STR_TIKET">帖子</string>
    <string name="STR_OTHER">版块</string>
    <string name="STR_COMMENT_NEWS">新闻</string>
    <string name="STR_COMMENT_VIDEO">视频</string>
    <string name="STR_COMMENT_BOARD">投稿</string>
    <string name="STR_NEAR_NEWS">新闻</string>
    <string name="STR_NEAR_THREAD">帖子</string>
    <string name="STR_NEAR_BOARD">投稿</string>
    <string name="STR_NEAR_USER">朋友</string>
    <string name="STR_CATEGORY1">新闻</string>
    <string name="STR_CATEGORY2">视频</string>
    <string name="STR_CATEGORY3">图片</string>
    <string name="STR_CATEGORY4">论坛</string>
    <string name="STR_CATEGORY5">投稿</string>
    <string name="STR_CATEGORY6">专题</string>
    <string name="STR_CATEGORY7">身边</string>
    <string name="STR_COMMENT">评论页</string>
    <string name="POST_COMMENT">发丰评论</string>
    <string name="STR_BOARD">投稿</string>
    <string name="POST_TITLE">发布新贴</string>
    <string name="REPLIES_TITLE">回复</string>
    <string name="POST_TITLE_COMMINT">发布</string>
    <string name="POST_EORROR">发布失败</string>
    <string name="POST_SUSSECC">帖子发布成功</string>
    <string name="POSTING_PIC">正在上传图片！</string>
    <string name="POST_PIC_SUSSECC">图片发布成功</string>
    <string name="POST_PIC_EORROR">图片发布失败</string>
    <string name="POST_PIC_EORROR_NOLOGIN">不允许上传图片</string>
    <string name="REPLY_SUSSECC">回复成功</string>
    <string name="get_gps_error">无法获取位置信息</string>
    <string name="geting_gps">正在定位中...</string>
    <string name="NO_GPS">你还没定位!</string>
    <string name="nav_title_register">用户注册</string>
    <string name="STR_REGISTER_FAILED">注册失败</string>
    <string name="STR_REGISTER_SUSSECC">注册成功</string>
    <string name="nav_title_login">用户登录</string>
    <string name="nav_btn_login">登录</string>
    <string name="STR_LOGIN_FAILED">登录失败</string>
    <string name="STR_INVALID_CHECKCODE">验证码错误</string>
    <string name="STR_LOGIN_SUSSECC">登录成功</string>
    <string name="nav_btn_return">返回</string>
    <string name="nav_btn_commit">提交</string>
    <string name="address_back">返回</string>
    <string name="delete_address">删除</string>
    <string name="address_title">当前位置</string>
    <string name="download_msg">离线数据较大 请在wifi环境下进行下载 点“是”会直接进行下载，点“否”取消本次下载</string>
    <string name="download_ok">是</string>
    <string name="download_no">否</string>
    <string name="no_sdcard">无sdcard，请先装载sdcard！</string>
    <string name="ad_title">广告页</string>
    <string name="ad_refresh">刷新</string>
    <string name="ad_gotochrome">新窗口打开</string>
</resources>
