<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff5f5f5"
    android:orientation="vertical" >

    <include
        android:id="@id/head"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        layout="@layout/nav_title_bar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="430.0dip"
        android:layout_weight="1.0" >

        <LinearLayout
            android:id="@id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="430.0dip"
            android:background="#fff5f5f5"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@id/imageView1"
                android:layout_width="121.0px"
                android:layout_height="121.0px"
                android:layout_marginTop="50.0dip"
                android:gravity="bottom"
                android:src="@drawable/about_logo" />

            <TextView
                android:id="@id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="180.0dip"
                android:layout_marginTop="10.0dip"
                android:text="@string/STR_VERSION"
                android:textSize="18.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/STR_COPYRIGHT_CN"
                android:textSize="18.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/STR_COPYRIGHT_EN"
                android:textSize="18.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20.0dip"
                android:gravity="center"
                android:text="@string/STR_COPYRIGHT_DEFINE"
                android:textSize="18.0sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>