<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffe2e2e2" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/head" android:layout_width="fill_parent" android:layout_height="50.0dip" layout="@layout/nav_title_bar" />
    <ScrollView android:background="#ffe2e2e2" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:isScrollContainer="true">
            <include android:id="@id/cl_item_title" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/user_profile_title" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_my_ticket" android:background="@drawable/shape_top_selector" android:clickable="true" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="-3.0dip" android:layout_marginRight="10.0dip">
                <TextView android:textSize="18.0sp" android:textColor="#ff545454" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/STR_MY_STICK" android:layout_weight="1.0" />
                <ImageView android:layout_width="12.0dip" android:layout_height="12.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/into_icon" />
            </LinearLayout>
            <View android:background="@drawable/shape_line" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="-1.0dip" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_my_comment" android:background="@drawable/shape_middle_selector" android:clickable="true" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="-3.0dip" android:layout_marginRight="10.0dip">
                <TextView android:textSize="18.0sp" android:textColor="#ff545454" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/STR_MY_COMMENT" android:layout_weight="1.0" />
                <ImageView android:layout_width="12.0dip" android:layout_height="12.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/into_icon" />
            </LinearLayout>
            <View android:background="@drawable/shape_line" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="-1.0dip" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_my_saved" android:background="@drawable/shape_bottom_selector" android:clickable="true" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="-3.0dip" android:layout_marginRight="10.0dip">
                <TextView android:textSize="18.0sp" android:textColor="#ff545454" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/STR_MY_SAVED" android:layout_weight="1.0" />
                <ImageView android:layout_width="12.0dip" android:layout_height="12.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/into_icon" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_my_message" android:background="@drawable/shape_bottom_selector" android:clickable="true" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="-3.0dip" android:layout_marginRight="10.0dip">
                <TextView android:textSize="18.0sp" android:textColor="#ff545454" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/STR_MY_MESSGAE" android:layout_weight="1.0" />
                <ImageView android:layout_width="12.0dip" android:layout_height="12.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/into_icon" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_nearby" android:background="@drawable/shape_bottom_selector" android:clickable="true" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="-3.0dip" android:layout_marginRight="10.0dip">
                <TextView android:textSize="18.0sp" android:textColor="#ff545454" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/STR_NEARBY" android:layout_weight="1.0" />
                <ImageView android:layout_width="12.0dip" android:layout_height="12.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/into_icon" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_weight="10.0">
                <Button android:textSize="22.0sp" android:textColor="#ff000000" android:gravity="center" android:id="@id/btn_logout" android:background="@drawable/logout_btn_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/STR_LOGOUT" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>