<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="64.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="64.0dip" android:layout_height="64.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="15.0dip">
        <ImageView android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/iv_user" android:layout_width="64.0dip" android:layout_height="64.0dip" android:src="@drawable/detail_avatar" />
        <ImageView android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/iv_userPhoto" android:visibility="visible" android:layout_width="64.0dip" android:layout_height="64.0dip" android:src="@drawable/detail_activated_avatar" />
    </FrameLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18.0sp" android:textColor="#ff333333" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/tv_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/STR_USER_NICKNAME" android:singleLine="true" />
        </LinearLayout>
        <TextView android:textSize="12.0sp" android:textColor="#ff666666" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/tv_nickname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
        <TextView android:textSize="12.0sp" android:textColor="#ff666666" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/tv_uid" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/STR_USER_UID" android:singleLine="true" />
    </LinearLayout>
    <Button android:textColor="#ffffffff" android:layout_gravity="center_vertical" android:id="@id/btn_set_avatar" android:background="@drawable/change_user_photo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:text="@string/STR_SET_AVATAR" />
</LinearLayout>