<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10.0dip"
    android:layout_marginRight="10.0dip"
    android:layout_marginTop="10.0dip"
    android:background="@drawable/shape_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@id/ll_not_download_img"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_marginTop="-3.0dip"
        android:background="@drawable/shape_top_selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_weight="1.0"
            android:text="@string/STR_NOT_DOWNLOAD_IMG"
            android:textColor="#ff545454"
            android:textSize="18.0sp" />

        <CheckBox
            android:id="@id/cb_not_download_img"
            android:layout_width="48.0dip"
            android:layout_height="24.0dip"
            android:button="@drawable/turn_selector" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginTop="-1.0dip"
        android:background="@drawable/shape_line" />

    <LinearLayout
        android:id="@id/ll_auto_push_msg"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_marginTop="-3.0dip"
        android:background="@drawable/shape_middle_selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_weight="1.0"
            android:text="@string/STR_AUTO_PUSH_MSG"
            android:textColor="#ff545454"
            android:textSize="18.0sp" />

        <CheckBox
            android:id="@id/cb_auto_push_msg"
            android:layout_width="48.0dip"
            android:layout_height="24.0dip"
            android:button="@drawable/turn_selector" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginTop="-1.0dip"
        android:background="@drawable/shape_line" />

    <LinearLayout
        android:id="@id/ll_clear_cache"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_marginTop="-3.0dip"
        android:background="@drawable/shape_bottom_selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_weight="1.0"
            android:text="@string/STR_CLEAR_CACHE"
            android:textColor="#ff545454"
            android:textSize="18.0sp" />

        <ImageView
            android:layout_width="12.0dip"
            android:layout_height="12.0dip"
            android:layout_marginRight="10.0dip"
            android:src="@drawable/into_icon" />
    </LinearLayout>

</LinearLayout>